# ENGINE

./: CMakeLists.txt  Collider.h  CollisionHandler.cpp  CollisionHandler.h  GameObject.h  IObject.h  MapParser.cpp  MapParser.h  README.md  RigidBody.h  animation.cpp  animation.h  character.h  engine.cpp  engine.h  gamemap.h  input.cpp  input.h  layer.h  main.cpp  text.cpp  text.h  texturemanager.cpp  texturemanager.h  tilelayer.cpp  tilelayer.h  timer.cpp  timer.h  transform.h  vector2d.h  warrior.cpp  warrior.h
